[package]
name = "apas-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0"
ordered-float = "4.2"
rand = "0.9.2"
rayon = "1.11.0"
tree_collections = "0.1.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
incremental = true

[lints.rust]
non_snake_case = "allow"
non_upper_case_globals = "allow"
unused_imports = "allow"
dead_code = "allow"

[lints.clippy]
module_inception = "allow"
type_complexity = "allow"

[workspace]
members = [ "."]

[[bench]]
name = "BenchFibonacciMt"
path = "benches/Chap11/BenchFibonacciMt.rs"
harness = false

[[bench]]
name = "BenchArraySeqStEphChap19"
path = "benches/Chap19/BenchArraySeqStEphChap19.rs"
harness = false

[[bench]]
name = "BenchUnsortedListPQ"
path = "benches/Chap45/BenchUnsortedListPQ.rs"
harness = false

[[bench]]
name = "BenchSortedListPQ"
path = "benches/Chap45/BenchSortedListPQ.rs"
harness = false

[[bench]]
name = "BenchBalancedTreePQ"
path = "benches/Chap45/BenchBalancedTreePQ.rs"
harness = false

[[bench]]
name = "BenchBinaryHeapPQ"
path = "benches/Chap45/BenchBinaryHeapPQ.rs"
harness = false

[[bench]]
name = "BenchLeftistHeapPQ"
path = "benches/Chap45/BenchLeftistHeapPQ.rs"
harness = false

[[bench]]
name = "BenchHeapsortExample"
path = "benches/Chap45/BenchHeapsortExample.rs"
harness = false

## DoublyLinkedList benchmarks moved to src/attic

[[bench]]
name = "BenchMathSeq"
path = "benches/Chap17/BenchMathSeq.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSeqStPer"
path = "benches/Chap37/BenchAVLTreeSeqStPer.rs"
harness = false
## SharedSinglyLinkedList removed

[[bench]]
name = "BenchArraySeqStEphChap18"
path = "benches/Chap18/BenchArraySeqStEphChap18.rs"
harness = false

[[bench]]
name = "BenchArraySeqStPerChap19"
path = "benches/Chap19/BenchArraySeqStPerChap19.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSeqStPerChap37Build"
path = "benches/Chap37/BenchAVLTreeSeqStPerChap37Build.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSeqStPerChap37Ops"
path = "benches/Chap37/BenchAVLTreeSeqStPerChap37Ops.rs"
harness = false

[[bench]]
name = "BenchArraySeqMtPerChap19"
path = "benches/Chap19/BenchArraySeqMtPerChap19.rs"
harness = false


[[bench]]
name = "BenchAVLTreeSeqStEph"
path = "benches/Chap37/BenchAVLTreeSeqStEph.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSeqStEphChap37Ops"
path = "benches/Chap37/BenchAVLTreeSeqStEphChap37Ops.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSeqStEphChap37Build"
path = "benches/Chap37/BenchAVLTreeSeqStEphChap37Build.rs"
harness = false

[[bench]]
name = "BenchChapter36St"
path = "benches/Chap36/BenchChapter36St.rs"
harness = false

[[bench]]
name = "BenchChapter36Mt"
path = "benches/Chap36/BenchChapter36Mt.rs"
harness = false

[[bench]]
name = "BenchChapter26Mt"
path = "benches/Chap26/BenchChapter26Mt.rs"
harness = false

[[bench]]
name = "BenchBSTPlainStEph"
path = "benches/Chap37/BenchBSTPlainStEph.rs"
harness = false

[[bench]]
name = "BenchBSTAVLStEph"
path = "benches/Chap37/BenchBSTAVLStEph.rs"
harness = false

[[bench]]
name = "BenchBSTRBStEph"
path = "benches/Chap37/BenchBSTRBStEph.rs"
harness = false

[[bench]]
name = "BenchBSTBBAlphaStEph"
path = "benches/Chap37/BenchBSTBBAlphaStEph.rs"
harness = false

[[bench]]
name = "BenchBSTTreapStEph"
path = "benches/Chap39/BenchBSTTreapStEph.rs"
harness = false

[[bench]]
name = "BenchBSTSplayStEph"
path = "benches/Chap37/BenchBSTSplayStEph.rs"
harness = false
[[bench]]
name = "BenchBSTPlainMtEph"
path = "benches/Chap37/BenchBSTPlainMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTAVLMtEph"
path = "benches/Chap37/BenchBSTAVLMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTRBMtEph"
path = "benches/Chap37/BenchBSTRBMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTBBAlphaMtEph"
path = "benches/Chap37/BenchBSTBBAlphaMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTTreapMtEph"
path = "benches/Chap39/BenchBSTTreapMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTSplayMtEph"
path = "benches/Chap37/BenchBSTSplayMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTSetAVLMtEph"
path = "benches/Chap37/BenchBSTSetAVLMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTSetBBAlphaMtEph"
path = "benches/Chap37/BenchBSTSetBBAlphaMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTSetPlainMtEph"
path = "benches/Chap37/BenchBSTSetPlainMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTSetRBMtEph"
path = "benches/Chap37/BenchBSTSetRBMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTSetSplayMtEph"
path = "benches/Chap37/BenchBSTSetSplayMtEph.rs"
harness = false

# Note: BenchBSTParaMtEph and BenchBSTParaStEph in Chap37/ are misplaced
# The modules are in Chap38, not Chap37. Already registered in Chap38 section.

[[bench]]
name = "BenchBSTParaTreapMtEph"
path = "benches/Chap39/BenchBSTParaTreapMtEph.rs"
harness = false

[[bench]]
name = "BenchInsertionSortSt"
path = "benches/Chap03/BenchInsertionSortSt.rs"
harness = false


[[bench]]
name = "BenchMappingStEph"
path = "benches/Chap05/BenchMappingStEph.rs"
harness = false

[[bench]]
name = "BenchDirGraphStEph"
path = "benches/Chap06/BenchDirGraphStEph.rs"
harness = false

[[bench]]
name = "BenchUnDirGraphStEph"
path = "benches/Chap06/BenchUnDirGraphStEph.rs"
harness = false

[[bench]]
name = "BenchWeightedDirGraphMtEphFloat"
path = "benches/Chap06/BenchWeightedDirGraphMtEphFloat.rs"
harness = false

[[bench]]
name = "BenchWeightedDirGraphMtEphInt"
path = "benches/Chap06/BenchWeightedDirGraphMtEphInt.rs"
harness = false

[[bench]]
name = "BenchWeightedDirGraphStEphFloat"
path = "benches/Chap06/BenchWeightedDirGraphStEphFloat.rs"
harness = false

[[bench]]
name = "BenchWeightedDirGraphStEphInt"
path = "benches/Chap06/BenchWeightedDirGraphStEphInt.rs"
harness = false

[[bench]]
name = "BenchWeightedUnDirGraphMtEphFloat"
path = "benches/Chap06/BenchWeightedUnDirGraphMtEphFloat.rs"
harness = false

[[bench]]
name = "BenchWeightedUnDirGraphMtEphInt"
path = "benches/Chap06/BenchWeightedUnDirGraphMtEphInt.rs"
harness = false

[[bench]]
name = "BenchWeightedUnDirGraphStEphFloat"
path = "benches/Chap06/BenchWeightedUnDirGraphStEphFloat.rs"
harness = false

[[bench]]
name = "BenchWeightedUnDirGraphStEphInt"
path = "benches/Chap06/BenchWeightedUnDirGraphStEphInt.rs"
harness = false

[[bench]]
name = "BenchExercise12_1"
path = "benches/Chap12/BenchExercise12_1.rs"
harness = false

[[bench]]
name = "BenchExercise12_2"
path = "benches/Chap12/BenchExercise12_2.rs"
harness = false

[[bench]]
name = "BenchExercise12_5"
path = "benches/Chap12/BenchExercise12_5.rs"
harness = false

[[bench]]
name = "BenchBSTParaStEph"
path = "benches/Chap38/BenchBSTParaStEph.rs"
harness = false

[[bench]]
name = "BenchBalBinTreeStEph"
path = "benches/Chap23/BenchBalBinTreeStEph.rs"
harness = false

[[bench]]
name = "BenchPrimTreeSeqSt"
path = "benches/Chap23/BenchPrimTreeSeqSt.rs"
harness = false

[[bench]]
name = "BenchLabDirGraphStEph"
path = "benches/Chap06/BenchLabDirGraphStEph.rs"
harness = false

[[bench]]
name = "BenchLabUnDirGraphStEph"
path = "benches/Chap06/BenchLabUnDirGraphStEph.rs"
harness = false

[[bench]]
name = "BenchSetStEph"
path = "benches/Chap05/BenchSetStEph.rs"
harness = false

[[bench]]
name = "BenchRelationStEph"
path = "benches/Chap05/BenchRelationStEph.rs"
harness = false

[[bench]]
name = "BenchBSTSetTreapMtEph"
path = "benches/Chap39/BenchBSTSetTreapMtEph.rs"
harness = false

[[bench]]
name = "BenchArraySeq"
path = "benches/Chap18/BenchArraySeq.rs"
harness = false

[[bench]]
name = "BenchArraySeqMtEph"
path = "benches/Chap18/BenchArraySeqMtEph.rs"
harness = false

# Test files in chapter subdirectories
[[test]]
name = "TestInsertionSortSt"
path = "tests/Chap03/TestInsertionSortSt.rs"

[[test]]
name = "TestSetStEph"
path = "tests/Chap05/TestSetStEph.rs"

[[test]]
name = "TestRelationStEph"
path = "tests/Chap05/TestRelationStEph.rs"

[[test]]
name = "TestMappingStEph"
path = "tests/Chap05/TestMappingStEph.rs"

[[test]]
name = "TestDirGraphStEph"
path = "tests/Chap06/TestDirGraphStEph.rs"

[[test]]
name = "TestUnDirGraphStEph"
path = "tests/Chap06/TestUnDirGraphStEph.rs"

[[test]]
name = "TestLabDirGraphStEph"
path = "tests/Chap06/TestLabDirGraphStEph.rs"

[[test]]
name = "TestLabUnDirGraphStEph"
path = "tests/Chap06/TestLabUnDirGraphStEph.rs"

[[test]]
name = "TestDirGraphMtEph"
path = "tests/Chap06/TestDirGraphMtEph.rs"

[[test]]
name = "TestLabDirGraphMtEph"
path = "tests/Chap06/TestLabDirGraphMtEph.rs"

[[test]]
name = "TestLabUnDirGraphMtEph"
path = "tests/Chap06/TestLabUnDirGraphMtEph.rs"

[[test]]
name = "TestUnDirGraphMtEph"
path = "tests/Chap06/TestUnDirGraphMtEph.rs"

[[test]]
name = "TestFibonacciMt"
path = "tests/Chap11/TestFibonacciMt.rs"

[[test]]
name = "TestWeightedDirGraphMtEphFloat"
path = "tests/Chap06/TestWeightedDirGraphMtEphFloat.rs"

[[test]]
name = "TestWeightedDirGraphMtEphInt"
path = "tests/Chap06/TestWeightedDirGraphMtEphInt.rs"

[[test]]
name = "TestWeightedDirGraphStEphInt"
path = "tests/Chap06/TestWeightedDirGraphStEphInt.rs"

[[test]]
name = "TestWeightedUnDirGraphMtEphFloat"
path = "tests/Chap06/TestWeightedUnDirGraphMtEphFloat.rs"

[[test]]
name = "TestWeightedUnDirGraphMtEphInt"
path = "tests/Chap06/TestWeightedUnDirGraphMtEphInt.rs"

[[test]]
name = "TestWeightedUnDirGraphStEphInt"
path = "tests/Chap06/TestWeightedUnDirGraphStEphInt.rs"

[[test]]
name = "TestWeightedUnDirGraphStEphFloat"
path = "tests/Chap06/TestWeightedUnDirGraphStEphFloat.rs"


[[test]]
name = "TestArraySeqMtEphSlice"
path = "tests/Chap19/TestArraySeqMtEphSlice.rs"

[[test]]
name = "TestMathSeq"
path = "tests/Chap18/TestMathSeq.rs"

[[test]]
name = "TestArraySeqStPerChap19"
path = "tests/Chap19/TestArraySeqStPerChap19.rs"

[[test]]
name = "TestArraySeqStPerChap18"
path = "tests/Chap18/TestArraySeqStPerChap18.rs"

[[test]]
name = "TestArraySeqStEphChap19"
path = "tests/Chap19/TestArraySeqStEphChap19.rs"

[[test]]
name = "TestArraySeqStEphChap18"
path = "tests/Chap18/TestArraySeqStEphChap18.rs"

[[test]]
name = "TestArraySeqMtPerChap19"
path = "tests/Chap19/TestArraySeqMtPerChap19.rs"

[[test]]
name = "TestArraySeqMtPerChap18"
path = "tests/Chap18/TestArraySeqMtPerChap18.rs"

[[test]]
name = "TestArraySeqMtEph"
path = "tests/Chap19/TestArraySeqMtEph.rs"

[[test]]
name = "TestAVLTreeSeqStPer"
path = "tests/Chap37/TestAVLTreeSeqStPer.rs"

[[test]]
name = "TestAVLTreeSeqStPerChap18"
path = "tests/Chap37/TestAVLTreeSeqStPer18.rs"

[[test]]
name = "TestAVLTreeSeqStPerChap19"
path = "tests/Chap37/TestAVLTreeSeqStPer19.rs"

[[test]]
name = "TestAVLTreeSeqStEphChap37"
path = "tests/Chap37/TestAVLTreeSeqStEphChap37.rs"

[[test]]
name = "TestAVLTreeSeqStEph18"
path = "tests/Chap37/TestAVLTreeSeqStEph18.rs"

[[test]]
name = "TestAVLTreeSeq"
path = "tests/Chap37/TestAVLTreeSeq.rs"

[[test]]
name = "TestBSTAVLMtEph"
path = "tests/Chap37/TestBSTAVLMtEph.rs"

[[test]]
name = "TestBSTAVLStEph"
path = "tests/Chap37/TestBSTAVLStEph.rs"

[[test]]
name = "TestBSTRBStEph"
path = "tests/Chap37/TestBSTRBStEph.rs"

[[test]]
name = "TestBSTBBAlphaStEph"
path = "tests/Chap37/TestBSTBBAlphaStEph.rs"

[[test]]
name = "TestBSTSplayStEph"
path = "tests/Chap37/TestBSTSplayStEph.rs"

[[test]]
name = "TestBSTMtEph"
path = "tests/Chap37/TestBSTMtEph.rs"

[[test]]
name = "TestBSTSetPlainMtEph"
path = "tests/Chap37/TestBSTSetPlainMtEph.rs"

[[test]]
name = "TestBSTSetAVLMtEph"
path = "tests/Chap37/TestBSTSetAVLMtEph.rs"

[[test]]
name = "TestBSTSetBBAlphaMtEph"
path = "tests/Chap37/TestBSTSetBBAlphaMtEph.rs"

[[test]]
name = "TestBSTSetRBMtEph"
path = "tests/Chap37/TestBSTSetRBMtEph.rs"

[[test]]
name = "TestBSTSetSplayMtEph"
path = "tests/Chap37/TestBSTSetSplayMtEph.rs"

[[test]]
name = "TestAVLTreeSeqMtPer"
path = "tests/Chap37/TestAVLTreeSeqMtPer.rs"

[[test]]
name = "TestBSTParaMtEph"
path = "tests/Chap38/TestBSTParaMtEph.rs"

[[test]]
name = "TestBSTParaStEph"
path = "tests/Chap38/TestBSTParaStEph.rs"

[[test]]
name = "TestLinkedListStEphChap18"
path = "tests/Chap18/TestLinkedListStEphChap18.rs"

[[test]]
name = "TestLinkedListStEph19"
path = "tests/Chap18/TestLinkedListStEph19.rs"

[[test]]
name = "TestLinkedListStPer19"
path = "tests/Chap18/TestLinkedListStPer19.rs"

[[bench]]
name = "BenchLinkedListStEph"
path = "benches/Chap18/BenchLinkedListStEph.rs"
harness = false

[[bench]]
name = "BenchLinkedListStPer"
path = "benches/Chap18/BenchLinkedListStPer.rs"
harness = false

[[bench]]
name = "BenchLinkedListStEphChap18"
path = "benches/Chap18/BenchLinkedListStEphChap18.rs"
harness = false

[[bench]]
name = "BenchLinkedListStPerChap18"
path = "benches/Chap18/BenchLinkedListStPerChap18.rs"
harness = false

# Chapter 36 tests
[[test]]
name = "TestQuickSortSt"
path = "tests/Chap36/TestQuickSortSt.rs"

[[test]]
name = "TestQuickSortMt"
path = "tests/Chap36/TestQuickSortMt.rs"

[[test]]
name = "TestQuickSortMtSlice"
path = "tests/Chap36/TestQuickSortMtSlice.rs"

# Chapter 39 tests
[[test]]
name = "TestBSTTreapStEph"
path = "tests/Chap39/TestBSTTreapStEph.rs"

[[test]]
name = "TestBSTTreapMtEph"
path = "tests/Chap39/TestBSTTreapMtEph.rs"

[[test]]
name = "TestBSTParaTreapMtEph"
path = "tests/Chap39/TestBSTParaTreapMtEph.rs"

[[test]]
name = "TestBSTSetTreapMtEph"
path = "tests/Chap39/TestBSTSetTreapMtEph.rs"


# Chapter 12 tests
[[test]]
name = "TestExercise12_1"
path = "tests/Chap12/TestExercise12_1.rs"

[[test]]
name = "TestExercise12_2"
path = "tests/Chap12/TestExercise12_2.rs"

[[test]]
name = "TestExercise12_5"
path = "tests/Chap12/TestExercise12_5.rs"

# Chapter 21 tests
[[test]]
name = "TestAlgorithm_21_1"
path = "tests/Chap21/TestAlgorithm_21_1.rs"

[[test]]
name = "TestAlgorithm_21_2"
path = "tests/Chap21/TestAlgorithm_21_2.rs"

[[test]]
name = "TestAlgorithm_21_6"
path = "tests/Chap21/TestAlgorithm_21_6.rs"

[[test]]
name = "TestExercise_21_5"
path = "tests/Chap21/TestExercise_21_5.rs"

[[test]]
name = "TestExercise_21_6"
path = "tests/Chap21/TestExercise_21_6.rs"

[[test]]
name = "TestExercise_21_7"
path = "tests/Chap21/TestExercise_21_7.rs"

[[test]]
name = "TestExercise_21_8"
path = "tests/Chap21/TestExercise_21_8.rs"

[[test]]
name = "TestAlgorithm_21_5"
path = "tests/Chap21/TestAlgorithm_21_5.rs"

[[test]]
name = "TestProblem_21_3"
path = "tests/Chap21/TestProblem_21_3.rs"

[[test]]
name = "TestProblem_21_4"
path = "tests/Chap21/TestProblem_21_4.rs"

[[test]]
name = "TestProblem_21_1"
path = "tests/Chap21/TestProblem_21_1.rs"

# Additional missing test files
[[test]]
name = "TestTypes"
path = "tests/TestTypes.rs"

[[test]]
name = "TestLinkedListStPerChap18"
path = "tests/Chap18/TestLinkedListStPerChap18.rs"


[[test]]
name = "TestArraySeqMtEphChap18"
path = "tests/Chap18/TestArraySeqMtEphChap18.rs"

[[test]]
name = "TestPrimTreeSeqSt"
path = "tests/Chap23/TestPrimTreeSeqSt.rs"

[[test]]
name = "TestExercise_21_9"
path = "tests/Chap21/TestExercise_21_9.rs"

[[test]]
name = "TestBalBinTreeStEph"
path = "tests/Chap23/TestBalBinTreeStEph.rs"

# Chapter 40: Augmenting Binary Search Trees

[[bench]]
name = "BenchBSTKeyValueStEph"
path = "benches/Chap40/BenchBSTKeyValueStEph.rs"
harness = false

[[bench]]
name = "BenchBSTSizeStEph"
path = "benches/Chap40/BenchBSTSizeStEph.rs"
harness = false

[[bench]]
name = "BenchBSTReducedStEph"
path = "benches/Chap40/BenchBSTReducedStEph.rs"
harness = false

[[test]]
name = "TestBSTKeyValueStEph"
path = "tests/Chap40/TestBSTKeyValueStEph.rs"

[[test]]
name = "TestBSTSizeStEph"
path = "tests/Chap40/TestBSTSizeStEph.rs"

[[test]]
name = "TestBSTReducedStEph"
path = "tests/Chap40/TestBSTReducedStEph.rs"

[[test]]
name = "TestArraySetStEph"
path = "tests/Chap41/TestArraySetStEph.rs"

[[test]]
name = "TestArraySetEnumMtEph"
path = "tests/Chap41/TestArraySetEnumMtEph.rs"

[[test]]
name = "TestAVLTreeSetStEph"
path = "tests/Chap41/TestAVLTreeSetStEph.rs"

[[test]]
name = "TestAVLTreeSetStPer"
path = "tests/Chap41/TestAVLTreeSetStPer.rs"

[[test]]
name = "TestAVLTreeSetMtPer"
path = "tests/Chap41/TestAVLTreeSetMtPer.rs"

[[test]]
name = "TestAVLTreeSetMtEph"
path = "tests/Chap41/TestAVLTreeSetMtEph.rs"

[[test]]
name = "TestExample41_3"
path = "tests/Chap41/TestExample41_3.rs"

[[test]]
name = "TestTableStPer"
path = "tests/Chap42/TestTableStPer.rs"

[[test]]
name = "TestTableStEph"
path = "tests/Chap42/TestTableStEph.rs"

[[test]]
name = "TestTableMtEph"
path = "tests/Chap42/TestTableMtEph.rs"

[[test]]
name = "TestExample42_1"
path = "tests/Chap42/TestExample42_1.rs"

[[test]]
name = "TestOrderedSetStPer"
path = "tests/Chap43/TestOrderedSetStPer.rs"

[[test]]
name = "TestOrderedSetStEph"
path = "tests/Chap43/TestOrderedSetStEph.rs"

[[test]]
name = "TestOrderedSetMtEph"
path = "tests/Chap43/TestOrderedSetMtEph.rs"

[[test]]
name = "TestOrderedTableStPer"
path = "tests/Chap43/TestOrderedTableStPer.rs"

[[test]]
name = "TestOrderedTableStEph"
path = "tests/Chap43/TestOrderedTableStEph.rs"

[[test]]
name = "TestOrderedTableMtEph"
path = "tests/Chap43/TestOrderedTableMtEph.rs"

[[test]]
name = "TestExample43_1"
path = "tests/Chap43/TestExample43_1.rs"

# Old Chap47 tests moved to attic
# [[test]]
# name = "TestAdvancedLinearProbing"
# path = "tests/Chap47/TestAdvancedLinearProbing.rs"
#
# [[test]]
# name = "TestAdvancedQuadraticProbing"
# path = "tests/Chap47/TestAdvancedQuadraticProbing.rs"
#
# [[test]]
# name = "TestAdvancedDoubleHashing"
# path = "tests/Chap47/TestAdvancedDoubleHashing.rs"
#
# [[test]]
# name = "TestClusteringAnalysis"
# path = "tests/Chap47/TestClusteringAnalysis.rs"
#
# [[test]]
# name = "TestProbeSequenceExamples"
# path = "tests/Chap47/TestProbeSequenceExamples.rs"


[[bench]]
name = "BenchArraySetStEph"
path = "benches/Chap41/BenchArraySetStEph.rs"
harness = false

[[bench]]
name = "BenchArraySetEnumMtEph"
path = "benches/Chap41/BenchArraySetEnumMtEph.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSetStEph"
path = "benches/Chap41/BenchAVLTreeSetStEph.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSetStPer"
path = "benches/Chap41/BenchAVLTreeSetStPer.rs"
harness = false

[[bench]]
name = "BenchTableStPer"
path = "benches/Chap42/BenchTableStPer.rs"
harness = false

[[bench]]
name = "BenchTableStEph"
path = "benches/Chap42/BenchTableStEph.rs"
harness = false

[[bench]]
name = "BenchTableMtEph"
path = "benches/Chap42/BenchTableMtEph.rs"
harness = false

# [[bench]]
# name = "BenchOrderedSetStPer"
# path = "benches/Chap43/BenchOrderedSetStPer.rs"
# harness = false

[[bench]]
name = "BenchOrderedSetStEph"
path = "benches/Chap43/BenchOrderedSetStEph.rs"
harness = false

[[bench]]
name = "BenchOrderedSetMtEph"
path = "benches/Chap43/BenchOrderedSetMtEph.rs"
harness = false

# [[bench]]
# name = "BenchOrderedTableStPer"
# path = "benches/Chap43/BenchOrderedTableStPer.rs"
# harness = false

[[bench]]
name = "BenchOrderedTableStEph"
path = "benches/Chap43/BenchOrderedTableStEph.rs"
harness = false

[[bench]]
name = "BenchOrderedTableMtEph"
path = "benches/Chap43/BenchOrderedTableMtEph.rs"
harness = false

[[bench]]
name = "BenchAugOrderedTableStPer"
path = "benches/Chap43/BenchAugOrderedTableStPer.rs"
harness = false

[[bench]]
name = "BenchAugOrderedTableStEph"
path = "benches/Chap43/BenchAugOrderedTableStEph.rs"
harness = false

[[bench]]
name = "BenchAugOrderedTableMtEph"
path = "benches/Chap43/BenchAugOrderedTableMtEph.rs"
harness = false

# Old Chap47 benches moved to attic
# [[bench]]
# name = "BenchSeparateChaining"
# path = "benches/Chap47/BenchSeparateChaining.rs"
# harness = false
#
# [[bench]]
# name = "BenchLinearProbing"
# path = "benches/Chap47/BenchLinearProbing.rs"
# harness = false
#
# [[bench]]
# name = "BenchFlatHashTable"
# path = "benches/Chap47/BenchFlatHashTable.rs"
# harness = false
#
# [[bench]]
# name = "BenchAdvancedLinearProbing"
# path = "benches/Chap47/BenchAdvancedLinearProbing.rs"
# harness = false
#
# [[bench]]
# name = "BenchAdvancedQuadraticProbing"
# path = "benches/Chap47/BenchAdvancedQuadraticProbing.rs"
# harness = false
#
# [[bench]]
# name = "BenchAdvancedDoubleHashing"
# path = "benches/Chap47/BenchAdvancedDoubleHashing.rs"
# harness = false

# Chapter 49: Dynamic Programming - Subset Sum and Minimum Edit Distance
# (See individual variant tests below in their respective chapter sections)

[[test]]
name = "TestBottomUpDPStPer"
path = "tests/Chap51/TestBottomUpDPStPer.rs"

[[test]]
name = "TestBottomUpDPStEph"
path = "tests/Chap51/TestBottomUpDPStEph.rs"

[[test]]
name = "TestBottomUpDPMtPer"
path = "tests/Chap51/TestBottomUpDPMtPer.rs"

[[test]]
name = "TestBottomUpDPMtEph"
path = "tests/Chap51/TestBottomUpDPMtEph.rs"

[[test]]
name = "TestTopDownDPStPer"
path = "tests/Chap51/TestTopDownDPStPer.rs"

[[test]]
name = "TestTopDownDPStEph"
path = "tests/Chap51/TestTopDownDPStEph.rs"

[[test]]
name = "TestTopDownDPMtPer"
path = "tests/Chap51/TestTopDownDPMtPer.rs"

[[test]]
name = "TestTopDownDPMtEph"
path = "tests/Chap51/TestTopDownDPMtEph.rs"

# Chapter 52: Graph Representations
[[test]]
name = "TestEdgeSetGraphStPer"
path = "tests/Chap52/TestEdgeSetGraphStPer.rs"

[[test]]
name = "TestEdgeSetGraphStEph"
path = "tests/Chap52/TestEdgeSetGraphStEph.rs"

[[test]]
name = "TestEdgeSetGraphMtPer"
path = "tests/Chap52/TestEdgeSetGraphMtPer.rs"

[[test]]
name = "TestEdgeSetGraphMtEph"
path = "tests/Chap52/TestEdgeSetGraphMtEph.rs"

[[test]]
name = "TestAdjTableGraphStPer"
path = "tests/Chap52/TestAdjTableGraphStPer.rs"

[[test]]
name = "TestAdjTableGraphStEph"
path = "tests/Chap52/TestAdjTableGraphStEph.rs"

[[test]]
name = "TestAdjTableGraphMtPer"
path = "tests/Chap52/TestAdjTableGraphMtPer.rs"

[[test]]
name = "TestGraphSearchStPer"
path = "tests/Chap53/TestGraphSearchStPer.rs"

[[test]]
name = "TestPQMinStPer"
path = "tests/Chap53/TestPQMinStPer.rs"

[[test]]
name = "TestPQMinMtEph"
path = "tests/Chap53/TestPQMinMtEph.rs"

[[test]]
name = "TestPQMinStEph"
path = "tests/Chap53/TestPQMinStEph.rs"

[[test]]
name = "TestPQMinMtPer"
path = "tests/Chap53/TestPQMinMtPer.rs"

[[test]]
name = "TestGraphSearchStEph"
path = "tests/Chap53/TestGraphSearchStEph.rs"

[[test]]
name = "TestGraphSearchMtPer"
path = "tests/Chap53/TestGraphSearchMtPer.rs"

[[bench]]
name = "BenchGraphSearchStPer"
path = "benches/Chap53/BenchGraphSearchStPer.rs"
harness = false

[[bench]]
name = "BenchPQMinStPer"
path = "benches/Chap53/BenchPQMinStPer.rs"
harness = false

[[bench]]
name = "BenchPQMinMtEph"
path = "benches/Chap53/BenchPQMinMtEph.rs"
harness = false

[[bench]]
name = "BenchEdgeSetGraphStPer"
path = "benches/Chap52/BenchEdgeSetGraphStPer.rs"
harness = false

[[bench]]
name = "BenchAdjTableGraphStPer"
path = "benches/Chap52/BenchAdjTableGraphStPer.rs"
harness = false

[[bench]]
name = "BenchSubsetSumStPer"
path = "benches/Chap49/BenchSubsetSumStPer.rs"
harness = false

[[bench]]
name = "BenchSubsetSumStEph"
path = "benches/Chap49/BenchSubsetSumStEph.rs"
harness = false

[[bench]]
name = "BenchSubsetSumMtPer"
path = "benches/Chap49/BenchSubsetSumMtPer.rs"
harness = false

[[bench]]
name = "BenchSubsetSumMtEph"
path = "benches/Chap49/BenchSubsetSumMtEph.rs"
harness = false

[[bench]]
name = "BenchOptBinSearchTreeStPer"
path = "benches/Chap50/BenchOptBinSearchTreeStPer.rs"
harness = false

[[bench]]
name = "BenchOptBinSearchTreeStEph"
path = "benches/Chap50/BenchOptBinSearchTreeStEph.rs"
harness = false

[[bench]]
name = "BenchMatrixChainStPer"
path = "benches/Chap50/BenchMatrixChainStPer.rs"
harness = false

[[bench]]
name = "BenchMatrixChainStEph"
path = "benches/Chap50/BenchMatrixChainStEph.rs"
harness = false

[[bench]]
name = "BenchBottomUpDPStPer"
path = "benches/Chap51/BenchBottomUpDPStPer.rs"
harness = false

[[bench]]
name = "BenchBottomUpDPStEph"
path = "benches/Chap51/BenchBottomUpDPStEph.rs"
harness = false

[[bench]]
name = "BenchBottomUpDPMtPer"
path = "benches/Chap51/BenchBottomUpDPMtPer.rs"
harness = false

[[bench]]
name = "BenchBottomUpDPMtEph"
path = "benches/Chap51/BenchBottomUpDPMtEph.rs"
harness = false

[[bench]]
name = "BenchTopDownDPStPer"
path = "benches/Chap51/BenchTopDownDPStPer.rs"
harness = false

[[bench]]
name = "BenchTopDownDPStEph"
path = "benches/Chap51/BenchTopDownDPStEph.rs"
harness = false

[[bench]]
name = "BenchTopDownDPMtPer"
path = "benches/Chap51/BenchTopDownDPMtPer.rs"
harness = false

[[bench]]
name = "BenchTopDownDPMtEph"
path = "benches/Chap51/BenchTopDownDPMtEph.rs"
harness = false

[[bench]]
name = "BenchMinEditDistStPer"
path = "benches/Chap49/BenchMinEditDistStPer.rs"
harness = false

[[bench]]
name = "BenchMinEditDistStEph"
path = "benches/Chap49/BenchMinEditDistStEph.rs"
harness = false

[[bench]]
name = "BenchMinEditDistMtPer"
path = "benches/Chap49/BenchMinEditDistMtPer.rs"
harness = false

[[bench]]
name = "BenchMinEditDistMtEph"
path = "benches/Chap49/BenchMinEditDistMtEph.rs"
harness = false

# Chapter 50: Optimal Binary Search Trees and Matrix Chain Product (TEMPORARILY COMMENTED OUT)
# Fundamental trait bound issues: KeyProb<T> needs T: MtT for Eq, but we use MtVal bounds
# OrderedFloat<f64> doesn't satisfy MtT. ArraySeqMtEph/MtPer APIs incompatible. Requires rewrite.
# [[test]]
# name = "TestOBST"
# path = "tests/TestOBST.rs"

# [[test]]
# name = "TestMatrixChain"
# path = "tests/TestMatrixChain.rs"

[[test]]
name = "TestOBSTMtPer"
path = "tests/Chap50/TestOBSTMtPer.rs"

[[test]]
name = "TestOBSTMtEph"
path = "tests/Chap50/TestOBSTMtEph.rs"

[[test]]
name = "TestMatrixChainMtEph"
path = "tests/Chap50/TestMatrixChainMtEph.rs"

[[test]]
name = "TestMatrixChainMtPer"
path = "tests/Chap50/TestMatrixChainMtPer.rs"

[[test]]
name = "TestMatrixChainStEph"
path = "tests/Chap50/TestMatrixChainStEph.rs"

[[test]]
name = "TestProbability"
path = "tests/Chap50/TestProbability.rs"

[[test]]
name = "TestOptBinSearchTreeStEph"
path = "tests/Chap50/TestOptBinSearchTreeStEph.rs"

[[test]]
name = "TestMinEditDistStEph"
path = "tests/Chap49/TestMinEditDistStEph.rs"

[[test]]
name = "TestMinEditDistMtEph"
path = "tests/Chap49/TestMinEditDistMtEph.rs"

[[test]]
name = "TestOptBinSearchTreeStPer"
path = "tests/Chap50/TestOptBinSearchTreeStPer.rs"

# [[bench]]
# name = "BenchOBST"
# path = "benches/BenchOBST.rs"
# harness = false

# [[bench]]
# name = "BenchMatrixChain"
# path = "benches/BenchMatrixChain.rs"
# harness = false

# Chapter 51: Implementing Dynamic Programming (TEMPORARILY COMMENTED OUT)
# [[test]]
# name = "TestBottomUpDP"
# path = "tests/TestBottomUpDP.rs"

# [[test]]
# name = "TestTopDownDP"
# path = "tests/TestTopDownDP.rs"

# [[bench]]
# name = "BenchBottomUpDP"
# path = "benches/BenchBottomUpDP.rs"
# harness = false

# [[bench]]
# name = "BenchTopDownDP"
# path = "benches/BenchTopDownDP.rs"
# harness = false


# Chapter 26 Tests
[[test]]
name = "TestMergeSortSt"
path = "tests/Chap26/TestMergeSortSt.rs"

[[test]]
name = "TestMergeSortMt"
path = "tests/Chap26/TestMergeSortMt.rs"

[[test]]
name = "TestDivConReduceSt"
path = "tests/Chap26/TestDivConReduceSt.rs"

[[test]]
name = "TestDivConReduceMt"
path = "tests/Chap26/TestDivConReduceMt.rs"

# Chapter 27 Tests
[[test]]
name = "TestReduceContractStEph"
path = "tests/Chap27/TestReduceContractStEph.rs"

[[test]]
name = "TestScanContractStEph"
path = "tests/Chap27/TestScanContractStEph.rs"

[[test]]
name = "TestReduceContractMtEph"
path = "tests/Chap27/TestReduceContractMtEph.rs"

[[test]]
name = "TestScanContractMtEph"
path = "tests/Chap27/TestScanContractMtEph.rs"

# Chapter 28 Tests
[[test]]
name = "TestMaxContigSubSumBruteStEph"
path = "tests/Chap28/TestMaxContigSubSumBruteStEph.rs"

[[test]]
name = "TestMaxContigSubSumReducedStEph"
path = "tests/Chap28/TestMaxContigSubSumReducedStEph.rs"

[[test]]
name = "TestMaxContigSubSumOptStEph"
path = "tests/Chap28/TestMaxContigSubSumOptStEph.rs"

[[test]]
name = "TestMaxContigSubSumOptMtEph"
path = "tests/Chap28/TestMaxContigSubSumOptMtEph.rs"

[[test]]
name = "TestMaxContigSubSumDivConStEph"
path = "tests/Chap28/TestMaxContigSubSumDivConStEph.rs"

[[test]]
name = "TestMaxContigSubSumDivConMtEph"
path = "tests/Chap28/TestMaxContigSubSumDivConMtEph.rs"

[[test]]
name = "TestMaxContigSubSumDivConOptStEph"
path = "tests/Chap28/TestMaxContigSubSumDivConOptStEph.rs"

[[test]]
name = "TestMaxContigSubSumDivConOptMtEph"
path = "tests/Chap28/TestMaxContigSubSumDivConOptMtEph.rs"

# Chapter 35 Tests
[[test]]
name = "TestOrderStatSelectStPer"
path = "tests/Chap35/TestOrderStatSelectStPer.rs"

[[test]]
name = "TestOrderStatSelectMtPer"
path = "tests/Chap35/TestOrderStatSelectMtPer.rs"

[[test]]
name = "TestOrderStatSelectStEph"
path = "tests/Chap35/TestOrderStatSelectStEph.rs"

[[test]]
name = "TestOrderStatSelectMtEph"
path = "tests/Chap35/TestOrderStatSelectMtEph.rs"

# Chapter 54 Tests
[[test]]
name = "TestBFSStEph"
path = "tests/Chap54/TestBFSStEph.rs"

[[test]]
name = "TestBFSMtEph"
path = "tests/Chap54/TestBFSMtEph.rs"

[[test]]
name = "TestBFSStPer"
path = "tests/Chap54/TestBFSStPer.rs"

[[test]]
name = "TestBFSMtPer"
path = "tests/Chap54/TestBFSMtPer.rs"

# Chapter 54 Benchmarks
[[bench]]
name = "BenchBFSStEph"
path = "benches/Chap54/BenchBFSStEph.rs"
harness = false

[[bench]]
name = "BenchBFSMtEph"
path = "benches/Chap54/BenchBFSMtEph.rs"
harness = false

[[bench]]
name = "BenchBFSStPer"
path = "benches/Chap54/BenchBFSStPer.rs"
harness = false

[[bench]]
name = "BenchBFSMtPer"
path = "benches/Chap54/BenchBFSMtPer.rs"
harness = false

# Chapter 35 Benchmarks
[[bench]]
name = "BenchOrderStatSelectStPer"
path = "benches/Chap35/BenchOrderStatSelectStPer.rs"
harness = false

[[bench]]
name = "BenchOrderStatSelectMtPer"
path = "benches/Chap35/BenchOrderStatSelectMtPer.rs"
harness = false

[[bench]]
name = "BenchOrderStatSelectStEph"
path = "benches/Chap35/BenchOrderStatSelectStEph.rs"
harness = false

[[bench]]
name = "BenchOrderStatSelectMtEph"
path = "benches/Chap35/BenchOrderStatSelectMtEph.rs"
harness = false

# Chapter 28 Benchmarks
[[bench]]
name = "BenchMaxContigSubSumBruteStEph"
path = "benches/Chap28/BenchMaxContigSubSumBruteStEph.rs"
harness = false

[[bench]]
name = "BenchMaxContigSubSumReducedStEph"
path = "benches/Chap28/BenchMaxContigSubSumReducedStEph.rs"
harness = false

[[bench]]
name = "BenchMaxContigSubSumOptStEph"
path = "benches/Chap28/BenchMaxContigSubSumOptStEph.rs"
harness = false

[[bench]]
name = "BenchMaxContigSubSumOptMtEph"
path = "benches/Chap28/BenchMaxContigSubSumOptMtEph.rs"
harness = false

[[bench]]
name = "BenchMaxContigSubSumDivConStEph"
path = "benches/Chap28/BenchMaxContigSubSumDivConStEph.rs"
harness = false

[[bench]]
name = "BenchMaxContigSubSumDivConMtEph"
path = "benches/Chap28/BenchMaxContigSubSumDivConMtEph.rs"
harness = false

[[bench]]
name = "BenchMaxContigSubSumDivConOptStEph"
path = "benches/Chap28/BenchMaxContigSubSumDivConOptStEph.rs"
harness = false

[[bench]]
name = "BenchMaxContigSubSumDivConOptMtEph"
path = "benches/Chap28/BenchMaxContigSubSumDivConOptMtEph.rs"
harness = false

# Chapter 26 Benchmarks
[[bench]]
name = "BenchMergeSortSt"
path = "benches/Chap26/BenchMergeSortSt.rs"
harness = false

[[bench]]
name = "BenchMergeSortMt"
path = "benches/Chap26/BenchMergeSortMt.rs"
harness = false

[[bench]]
name = "BenchDivConReduceSt"
path = "benches/Chap26/BenchDivConReduceSt.rs"
harness = false

[[bench]]
name = "BenchDivConReduceMt"
path = "benches/Chap26/BenchDivConReduceMt.rs"
harness = false

# Chapter 27 Benchmarks
[[bench]]
name = "BenchReduceContractStEph"
path = "benches/Chap27/BenchReduceContractStEph.rs"
harness = false

[[bench]]
name = "BenchScanContractStEph"
path = "benches/Chap27/BenchScanContractStEph.rs"
harness = false

[[bench]]
name = "BenchReduceContractMtEph"
path = "benches/Chap27/BenchReduceContractMtEph.rs"
harness = false

[[bench]]
name = "BenchScanContractMtEph"
path = "benches/Chap27/BenchScanContractMtEph.rs"
harness = false

# Chapter 55 Tests
[[test]]
name = "TestDFSStEph"
path = "tests/Chap55/TestDFSStEph.rs"

[[test]]
name = "TestDFSStPer"
path = "tests/Chap55/TestDFSStPer.rs"

[[test]]
name = "TestCycleDetectStEph"
path = "tests/Chap55/TestCycleDetectStEph.rs"

[[test]]
name = "TestCycleDetectStPer"
path = "tests/Chap55/TestCycleDetectStPer.rs"

[[test]]
name = "TestTopoSortStEph"
path = "tests/Chap55/TestTopoSortStEph.rs"

[[test]]
name = "TestTopoSortStPer"
path = "tests/Chap55/TestTopoSortStPer.rs"

[[test]]
name = "TestSCCStEph"
path = "tests/Chap55/TestSCCStEph.rs"

[[test]]
name = "TestSCCStPer"
path = "tests/Chap55/TestSCCStPer.rs"

[[test]]
name = "TestPathWeightUtilsStEph"
path = "tests/Chap56/TestPathWeightUtilsStEph.rs"

[[test]]
name = "TestPathWeightUtilsStPer"
path = "tests/Chap56/TestPathWeightUtilsStPer.rs"

[[test]]
name = "TestSSSPResultStEphInt"
path = "tests/Chap56/TestSSSPResultStEphInt.rs"

[[test]]
name = "TestSSSPResultStEphFloat"
path = "tests/Chap56/TestSSSPResultStEphFloat.rs"

[[test]]
name = "TestSSSPResultStPerInt"
path = "tests/Chap56/TestSSSPResultStPerInt.rs"

[[test]]
name = "TestSSSPResultStPerFloat"
path = "tests/Chap56/TestSSSPResultStPerFloat.rs"

[[test]]
name = "TestAllPairsResultStEphInt"
path = "tests/Chap56/TestAllPairsResultStEphInt.rs"

[[test]]
name = "TestAllPairsResultStEphFloat"
path = "tests/Chap56/TestAllPairsResultStEphFloat.rs"

[[test]]
name = "TestAllPairsResultStPerInt"
path = "tests/Chap56/TestAllPairsResultStPerInt.rs"

[[test]]
name = "TestAllPairsResultStPerFloat"
path = "tests/Chap56/TestAllPairsResultStPerFloat.rs"

[[test]]
name = "TestExample56_1"
path = "tests/Chap56/TestExample56_1.rs"

[[test]]
name = "TestExample56_3"
path = "tests/Chap56/TestExample56_3.rs"

[[test]]
name = "TestDijkstraStEphInt"
path = "tests/Chap57/TestDijkstraStEphInt.rs"

[[test]]
name = "TestDijkstraStEphFloat"
path = "tests/Chap57/TestDijkstraStEphFloat.rs"

[[test]]
name = "TestStackStEph"
path = "tests/Chap57/TestStackStEph.rs"

[[test]]
name = "TestBellmanFordStEphInt"
path = "tests/Chap58/TestBellmanFordStEphInt.rs"

[[test]]
name = "TestBellmanFordStEphFloat"
path = "tests/Chap58/TestBellmanFordStEphFloat.rs"

[[test]]
name = "TestJohnsonStEphInt"
path = "tests/Chap59/TestJohnsonStEphInt.rs"

[[test]]
name = "TestJohnsonStEphFloat"
path = "tests/Chap59/TestJohnsonStEphFloat.rs"

[[test]]
name = "TestJohnsonMtEphInt"
path = "tests/Chap59/TestJohnsonMtEphInt.rs"

[[test]]
name = "TestJohnsonMtEphFloat"
path = "tests/Chap59/TestJohnsonMtEphFloat.rs"

[[test]]
name = "TestUnionFindStEph"
path = "tests/Chap65/TestUnionFindStEph.rs"

[[test]]
name = "TestPrimStEph"
path = "tests/Chap65/TestPrimStEph.rs"

[[test]]
name = "TestKruskalStEph"
path = "tests/Chap65/TestKruskalStEph.rs"

[[test]]
name = "TestBoruvkaStEph"
path = "tests/Chap66/TestBoruvkaStEph.rs"

[[test]]
name = "TestBoruvkaMtEph"
path = "tests/Chap66/TestBoruvkaMtEph.rs"

# Chapter 55 Benchmarks
[[bench]]
name = "BenchDFSStEph"
path = "benches/Chap55/BenchDFSStEph.rs"
harness = false

[[bench]]
name = "BenchDFSStPer"
path = "benches/Chap55/BenchDFSStPer.rs"
harness = false

[[bench]]
name = "BenchCycleDetectStEph"
path = "benches/Chap55/BenchCycleDetectStEph.rs"
harness = false

[[bench]]
name = "BenchCycleDetectStPer"
path = "benches/Chap55/BenchCycleDetectStPer.rs"
harness = false

[[bench]]
name = "BenchTopoSortStEph"
path = "benches/Chap55/BenchTopoSortStEph.rs"
harness = false

[[bench]]
name = "BenchTopoSortStPer"
path = "benches/Chap55/BenchTopoSortStPer.rs"
harness = false

[[bench]]
name = "BenchSCCStEph"
path = "benches/Chap55/BenchSCCStEph.rs"
harness = false

[[bench]]
name = "BenchSCCStPer"
path = "benches/Chap55/BenchSCCStPer.rs"
harness = false

# Chapter 56 Benchmarks
[[bench]]
name = "BenchPathWeightUtilsStEph"
path = "benches/Chap56/BenchPathWeightUtilsStEph.rs"
harness = false

[[bench]]
name = "BenchPathWeightUtilsStPer"
path = "benches/Chap56/BenchPathWeightUtilsStPer.rs"
harness = false

[[bench]]
name = "BenchSSSPResultStEphInt"
path = "benches/Chap56/BenchSSSPResultStEphInt.rs"
harness = false

[[bench]]
name = "BenchSSSPResultStEphFloat"
path = "benches/Chap56/BenchSSSPResultStEphFloat.rs"
harness = false

[[bench]]
name = "BenchStackStEph"
path = "benches/Chap57/BenchStackStEph.rs"
harness = false

[[bench]]
name = "BenchDijkstraStEphInt"
path = "benches/Chap57/BenchDijkstraStEphInt.rs"
harness = false

[[bench]]
name = "BenchDijkstraStEphFloat"
path = "benches/Chap57/BenchDijkstraStEphFloat.rs"
harness = false

[[bench]]
name = "BenchBellmanFordStEphInt"
path = "benches/Chap58/BenchBellmanFordStEphInt.rs"
harness = false

[[bench]]
name = "BenchBellmanFordStEphFloat"
path = "benches/Chap58/BenchBellmanFordStEphFloat.rs"
harness = false

[[bench]]
name = "BenchJohnsonStEphInt"
path = "benches/Chap59/BenchJohnsonStEphInt.rs"
harness = false

[[bench]]
name = "BenchJohnsonStEphFloat"
path = "benches/Chap59/BenchJohnsonStEphFloat.rs"
harness = false

[[bench]]
name = "BenchJohnsonMtEphInt"
path = "benches/Chap59/BenchJohnsonMtEphInt.rs"
harness = false

[[bench]]
name = "BenchJohnsonMtEphFloat"
path = "benches/Chap59/BenchJohnsonMtEphFloat.rs"
harness = false

[[bench]]
name = "BenchVertexMatchingStEph"
path = "benches/Chap61/BenchVertexMatchingStEph.rs"
harness = false

[[bench]]
name = "BenchVertexMatchingMtEph"
path = "benches/Chap61/BenchVertexMatchingMtEph.rs"
harness = false

[[bench]]
name = "BenchEdgeContractionStEph"
path = "benches/Chap61/BenchEdgeContractionStEph.rs"
harness = false

[[bench]]
name = "BenchEdgeContractionMtEph"
path = "benches/Chap61/BenchEdgeContractionMtEph.rs"
harness = false

[[bench]]
name = "BenchStarPartitionStEph"
path = "benches/Chap62/BenchStarPartitionStEph.rs"
harness = false

[[bench]]
name = "BenchStarPartitionMtEph"
path = "benches/Chap62/BenchStarPartitionMtEph.rs"
harness = false

[[bench]]
name = "BenchStarContractionStEph"
path = "benches/Chap62/BenchStarContractionStEph.rs"
harness = false

[[bench]]
name = "BenchStarContractionMtEph"
path = "benches/Chap62/BenchStarContractionMtEph.rs"
harness = false

[[bench]]
name = "BenchConnectivityStEph"
path = "benches/Chap63/BenchConnectivityStEph.rs"
harness = false

[[bench]]
name = "BenchConnectivityMtEph"
path = "benches/Chap63/BenchConnectivityMtEph.rs"
harness = false

[[bench]]
name = "BenchSpanTreeStEph"
path = "benches/Chap64/BenchSpanTreeStEph.rs"
harness = false

[[bench]]
name = "BenchSpanTreeMtEph"
path = "benches/Chap64/BenchSpanTreeMtEph.rs"
harness = false

[[bench]]
name = "BenchTSPApproxStEph"
path = "benches/Chap64/BenchTSPApproxStEph.rs"
harness = false

[[bench]]
name = "BenchTSPApproxMtEph"
path = "benches/Chap64/BenchTSPApproxMtEph.rs"
harness = false

[[bench]]
name = "BenchUnionFindStEph"
path = "benches/Chap65/BenchUnionFindStEph.rs"
harness = false

[[bench]]
name = "BenchPrimStEph"
path = "benches/Chap65/BenchPrimStEph.rs"
harness = false

[[bench]]
name = "BenchKruskalStEph"
path = "benches/Chap65/BenchKruskalStEph.rs"
harness = false

[[bench]]
name = "BenchBoruvkaStEph"
path = "benches/Chap66/BenchBoruvkaStEph.rs"
harness = false

[[bench]]
name = "BenchBoruvkaMtEph"
path = "benches/Chap66/BenchBoruvkaMtEph.rs"
harness = false

# Missing test files - added to fix discovery issue
[[test]]
name = "TestWeightedDirGraphStEphFloat"
path = "tests/Chap06/TestWeightedDirGraphStEphFloat.rs"

[[test]]
name = "TestAlgorithm21_6"
path = "tests/Chap21/TestAlgorithm21_6.rs"

[[test]]
name = "TestAugOrderedTableMtEph"
path = "tests/Chap43/TestAugOrderedTableMtEph.rs"

[[test]]
name = "TestAugOrderedTableStEph"
path = "tests/Chap43/TestAugOrderedTableStEph.rs"

[[test]]
name = "TestAugOrderedTableStPer"
path = "tests/Chap43/TestAugOrderedTableStPer.rs"

[[test]]
name = "TestDocumentIndex"
path = "tests/Chap44/TestDocumentIndex.rs"

[[test]]
name = "TestExample44_1"
path = "tests/Chap44/TestExample44_1.rs"

[[test]]
name = "TestBalancedTreePQ"
path = "tests/Chap45/TestBalancedTreePQ.rs"

[[test]]
name = "TestBinaryHeapPQ"
path = "tests/Chap45/TestBinaryHeapPQ.rs"

[[test]]
name = "TestLeftistHeapPQ"
path = "tests/Chap45/TestLeftistHeapPQ.rs"

[[test]]
name = "TestSortedListPQ"
path = "tests/Chap45/TestSortedListPQ.rs"

[[test]]
name = "TestUnsortedListPQ"
path = "tests/Chap45/TestUnsortedListPQ.rs"

[[test]]
name = "TestHeapsortExample"
path = "tests/Chap45/TestHeapsortExample.rs"

# Old Chap47 tests moved to attic
# [[test]]
# name = "TestDoubleHashing"
# path = "tests/Chap47/TestDoubleHashing.rs"
#
# [[test]]
# name = "TestFlatHashTable"
# path = "tests/Chap47/TestFlatHashTable.rs"
#
# [[test]]
# name = "TestHashExamples"
# path = "tests/Chap47/TestHashExamples.rs"
#
# [[test]]
# name = "TestHashFunctionTraits"
# path = "tests/Chap47/TestHashFunctionTraits.rs"
#
# [[test]]
# name = "TestLinearProbing"
# path = "tests/Chap47/TestLinearProbing.rs"
#
# [[test]]
# name = "TestNestedHashTable"
# path = "tests/Chap47/TestNestedHashTable.rs"
#
# [[test]]
# name = "TestQuadraticProbing"
# path = "tests/Chap47/TestQuadraticProbing.rs"
#
# [[test]]
# name = "TestSeparateChaining"
# path = "tests/Chap47/TestSeparateChaining.rs"

[[test]]
name = "TestAdjMatrixGraphStEph"
path = "tests/Chap52/TestAdjMatrixGraphStEph.rs"

[[test]]
name = "TestAdjMatrixGraphStPer"
path = "tests/Chap52/TestAdjMatrixGraphStPer.rs"

[[test]]
name = "TestAdjMatrixGraphMtPer"
path = "tests/Chap52/TestAdjMatrixGraphMtPer.rs"

[[test]]
name = "TestAdjSeqGraphStEph"
path = "tests/Chap52/TestAdjSeqGraphStEph.rs"

[[test]]
name = "TestAdjSeqGraphStPer"
path = "tests/Chap52/TestAdjSeqGraphStPer.rs"

[[test]]
name = "TestAdjSeqGraphMtPer"
path = "tests/Chap52/TestAdjSeqGraphMtPer.rs"

[[test]]
name = "TestEdgeContractionMtEph"
path = "tests/Chap61/TestEdgeContractionMtEph.rs"

[[test]]
name = "TestEdgeContractionStEph"
path = "tests/Chap61/TestEdgeContractionStEph.rs"

[[test]]
name = "TestVertexMatchingMtEph"
path = "tests/Chap61/TestVertexMatchingMtEph.rs"

[[test]]
name = "TestVertexMatchingStEph"
path = "tests/Chap61/TestVertexMatchingStEph.rs"

[[test]]
name = "TestStarContractionMtEph"
path = "tests/Chap62/TestStarContractionMtEph.rs"

[[test]]
name = "TestStarContractionStEph"
path = "tests/Chap62/TestStarContractionStEph.rs"

[[test]]
name = "TestStarPartitionMtEph"
path = "tests/Chap62/TestStarPartitionMtEph.rs"

[[test]]
name = "TestStarPartitionStEph"
path = "tests/Chap62/TestStarPartitionStEph.rs"

[[test]]
name = "TestConnectivityMtEph"
path = "tests/Chap63/TestConnectivityMtEph.rs"

[[test]]
name = "TestConnectivityStEph"
path = "tests/Chap63/TestConnectivityStEph.rs"

[[test]]
name = "TestSpanTreeMtEph"
path = "tests/Chap64/TestSpanTreeMtEph.rs"

[[test]]
name = "TestSpanTreeStEph"
path = "tests/Chap64/TestSpanTreeStEph.rs"

[[test]]
name = "TestTSPApproxMtEph"
path = "tests/Chap64/TestTSPApproxMtEph.rs"

[[test]]
name = "TestTSPApproxStEph"
path = "tests/Chap64/TestTSPApproxStEph.rs"

[[test]]
name = "TestBSTBBAlphaMtEph"
path = "tests/Chap37/TestBSTBBAlphaMtEph.rs"

[[test]]
name = "TestBSTPlainMtEph"
path = "tests/Chap37/TestBSTPlainMtEph.rs"

[[test]]
name = "TestBSTPlainStEph"
path = "tests/Chap37/TestBSTPlainStEph.rs"

[[test]]
name = "TestBSTRBMtEph"
path = "tests/Chap37/TestBSTRBMtEph.rs"

[[test]]
name = "TestBSTSplayMtEph"
path = "tests/Chap37/TestBSTSplayMtEph.rs"

[[test]]
name = "TestMatrixChainStPer"
path = "tests/Chap50/TestMatrixChainStPer.rs"

[[test]]
name = "TestSubsetSumStEph"
path = "tests/Chap49/TestSubsetSumStEph.rs"

[[test]]
name = "TestSubsetSumMtEph"
path = "tests/Chap49/TestSubsetSumMtEph.rs"

[[test]]
name = "TestSubsetSumStPer"
path = "tests/Chap49/TestSubsetSumStPer.rs"

[[test]]
name = "TestSubsetSumMtPer"
path = "tests/Chap49/TestSubsetSumMtPer.rs"

[[test]]
name = "TestMinEditDistStPer"
path = "tests/Chap49/TestMinEditDistStPer.rs"

[[test]]
name = "TestMinEditDistMtPer"
path = "tests/Chap49/TestMinEditDistMtPer.rs"

[[test]]
name = "TestOrderedTableMtPer"
path = "tests/Chap43/TestOrderedTableMtPer.rs"

[[test]]
name = "TestLibIntegration"
path = "tests/TestLibIntegration.rs"

[[test]]
name = "TestParaHashTableStEph"
path = "tests/Chap47/TestParaHashTableStEph.rs"

[[test]]
name = "TestLinProbFlatHashTable"
path = "tests/Chap47/TestLinProbFlatHashTable.rs"

[[test]]
name = "TestVecChainedHashTable"
path = "tests/Chap47/TestVecChainedHashTable.rs"

[[test]]
name = "TestLinkedListChainedHashTable"
path = "tests/Chap47/TestLinkedListChainedHashTable.rs"

[[test]]
name = "TestStructChainedHashTable"
path = "tests/Chap47/TestStructChainedHashTable.rs"

[[test]]
name = "TestQuadProbFlatHashTable"
path = "tests/Chap47/TestQuadProbFlatHashTable.rs"

[[test]]
name = "TestDoubleHashFlatHashTable"
path = "tests/Chap47/TestDoubleHashFlatHashTable.rs"

# Chap47 benches moved to attic
# [[bench]]
# name = "BenchLinProbFlatHashTable"
# path = "benches/Chap47/BenchLinProbFlatHashTable.rs"
# harness = false
#
# [[bench]]
# name = "BenchQuadProbFlatHashTable"
# path = "benches/Chap47/BenchQuadProbFlatHashTable.rs"
# harness = false
#
# [[bench]]
# name = "BenchDoubleHashFlatHashTable"
# path = "benches/Chap47/BenchDoubleHashFlatHashTable.rs"
# harness = false
#
# [[bench]]
# name = "BenchVecChainedHashTable"
# path = "benches/Chap47/BenchVecChainedHashTable.rs"
# harness = false

[[bench]]
name = "BenchArraySeqMtEphChap18"
path = "benches/Chap18/BenchArraySeqMtEphChap18.rs"
harness = false

[[test]]
name = "TestExample45_2"
path = "tests/Chap45/TestExample45_2.rs"


[[test]]
name = "TestArraySeq"
path = "tests/Chap18/TestArraySeq.rs"
